# 42-fillit

./: .gitignore  CMakeLists.txt  Makefile  README.md  alloc_wrap.c  fillit  fillit.h  libft.h  map.c  map_BACKUP_14991.c  map_BASE_14991.c  map_LOCAL_14991.c  memorycheck.sh  output.txt  patterns  place_test  random  read.c  redirect.sh  result.txt  solve.c  split.c  test.sh  valid.c  valid_t  valid_ttmn.c
